# ultra-meeting

./: .gitignore  HOW-TO-RUN.md  INSTALLATION.md  README.md  install.sh  plan.md  run.sh  test-install.sh  test-integration.sh  update.sh
UltraMeeting/: Info.plist  Package.swift  UltraMeeting.entitlements
UltraMeeting/Sources/: AppState.swift  ComplianceView.swift  Database.swift  MeetingDetection.swift  MeetingStore.swift  MenuBarView.swift  QMDService.swift  RecordingsBrowserView.swift  RustBridge.swift  ScreenCaptureBridge.swift  SessionMetadataParser.swift  Settings.swift  SettingsView.swift  UltraMeetingApp.swift
UltraMeeting/UltraMeeting.xcodeproj/: project.pbxproj
docs/: architecture.md  benchmarks.md  end-to-end-test-results.md  fault-injection.md  recording-validation.md  release-checklist.md  spike-criteria.md  spike-results.md  test-matrix.md  test-report.md
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/src/: capture.rs  error.rs  ffi.rs  lib.rs  remote_audio.rs  session.rs  state.rs  storage.rs  transcription.rs
scripts/: build-release.sh  recording-validation.sh
spikes/: run-spikes.sh
spikes/01-permissions/: README.md
spikes/01-permissions/PermissionSpike/: Info.plist  PermissionCheckView.swift  PermissionSpikeApp.swift
spikes/02-audio-stability/: Cargo.toml
spikes/02-audio-stability/src/: main.rs
spikes/03-sync-drift/: Cargo.toml
spikes/03-sync-drift/src/: main.rs
spikes/04-transcription/: Cargo.toml
spikes/04-transcription/src/: main.rs
