[package]
name = "ultra-meeting-core"
version = "0.1.0"
edition = "2021"
description = "Rust core: state machine, audio, storage, transcription"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
cpal = "0.17"
hound = "3.5"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
libc = "0.2"
once_cell = "1"
whisper-rs = { version = "0.15", optional = true }

[features]
default = []
transcription = ["whisper-rs"]
