[package]
name = "transcription-spike"
version = "0.1.0"
edition = "2021"
description = "Phase 0 spike: whisper base.en throughput benchmark"

[dependencies]
whisper-rs = "0.15"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
reqwest = { version = "0.11", features = ["blocking"] }
